Fix date alignment in posting list (#1022)

--- a/src/Components/Common/OlzPostingListItem/OlzPostingListItem.scss
+++ b/src/Components/Common/OlzPostingListItem/OlzPostingListItem.scss
@@ -35,6 +35,7 @@
     .title {
         font-size: 14px;
         font-weight: bold;
+        line-height: 14px;
         margin-top: 2px;
     }
 
